# tree-annotated-plot

./: .gitignore  CHANGELOG.md  CLAUDE.md  NEXT_STEPS.md  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
docs/: cli.md  examples.md  index.md  python-api.md
examples/: fetch_auspice_data.py  flu-seqneut-2025to2026_titer_charts.py  synthetic_example.py
scripts/: build_docs.sh  check.sh  generate_docs_assets.py
src/tree_annotated_plot/: __init__.py  _color.py  _config.py  _plot.py  _tree.py  cli.py
tests/: test_appearance_tuning.py  test_branch_length.py  test_chart_loader.py  test_cli.py  test_color_tree.py  test_examples_run.py  test_introspection.py  test_label_connection.py  test_line_order.py  test_plot.py  test_plot_config.py  test_real_data.py  test_reconciliation.py  test_scale_bar.py  test_style.py  test_tree_location.py
