[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tree-annotated-plot"
version = "0.2.2"
description = "Annotate the axis of an Altair / Vega-Lite plot with a phylogenetic tree."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Jesse Bloom", email = "jbloom@fredhutch.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "altair>=6.0,<7",
    "click>=8.0",
    "pandas>=2.0",
    "vl-convert-python>=1.9",
]

[project.urls]
Documentation = "https://jbloomlab.github.io/tree-annotated-plot/"
Homepage = "https://github.com/jbloomlab/tree-annotated-plot"
Repository = "https://github.com/jbloomlab/tree-annotated-plot"
Issues = "https://github.com/jbloomlab/tree-annotated-plot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "black>=24",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-click>=0.8",
]

[project.scripts]
tree-annotated-plot = "tree_annotated_plot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tree_annotated_plot"]
dev-mode-dirs = ["src"]

[tool.black]
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
